--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-unused-vars":"off",
+        "no-useless-constructor":"off"
     }
 }
