--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/cors": "^2.8.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.11",
     "uuidv4": "^6.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "dotenv": "^8.2.0",
